samples/_failures_safe/1761789383_d79a0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_714c13be.c: In function ‘main’:
./samples/SAFE/__tmp_714c13be.c:143:11: error: expected ‘;’ at end of input
  143 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_714c13be.c:143:5: error: expected declaration or statement at end of input
  143 |     printf
      |     ^~~~~~
